objects/Communication_History_Setting__mdt.object
<CustomObject>
    <label>Communication History Setting</label>
    <pluralLabel>Communication History Settings</pluralLabel>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                    <default>true</default>
                    <label>Channel</label>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Group_Name__c</fullName>
        <label>Channel Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                    <default>true</default>
                    <label>Mail</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Clienteling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>